// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hover on TableCellSum td with row sum 1`] = `
<table
  className="table table-dark"
>
  <tbody>
    <tr
      id="row1"
    >
      <td
        id="somecell1"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "linear-gradient(90deg, rgba(220,53,69,1) 33.33%, rgba(108,117,125,1) 33.33%)",
          }
        }
      >
        33.33
      </td>
      <td
        id="somecell2"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "linear-gradient(90deg, rgba(220,53,69,1) 66.67%, rgba(108,117,125,1) 66.67%)",
          }
        }
      >
        66.67
      </td>
      <td
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Sum: 
        3
      </td>
    </tr>
    <tr
      id="row2"
    >
      <td
        id="somecell3"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        0
      </td>
      <td
        id="somecell4"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        1
      </td>
      <td
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Sum: 
        1
      </td>
    </tr>
    <tr>
      <td>
        Average sum: 
        0
      </td>
      <td>
        Average sum: 
        1
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`test cases for td cell click cell 1`] = `
<table
  className="table table-dark"
>
  <tbody>
    <tr
      id="row1"
    >
      <td
        id="somecell1"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "#6c757d",
          }
        }
      >
        2
      </td>
      <td
        id="somecell2"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        2
      </td>
      <td
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Sum: 
        4
      </td>
    </tr>
    <tr
      id="row2"
    >
      <td
        id="somecell3"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        0
      </td>
      <td
        id="somecell4"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "#6c757d",
          }
        }
      >
        1
      </td>
      <td
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Sum: 
        1
      </td>
    </tr>
    <tr>
      <td>
        Average sum: 
        1
      </td>
      <td>
        Average sum: 
        1
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`test cases for td cell hover cell 1`] = `
<table
  className="table table-dark"
>
  <tbody>
    <tr
      id="row1"
    >
      <td
        id="somecell1"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "#6c757d",
          }
        }
      >
        1
      </td>
      <td
        id="somecell2"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        2
      </td>
      <td
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Sum: 
        3
      </td>
    </tr>
    <tr
      id="row2"
    >
      <td
        id="somecell3"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        0
      </td>
      <td
        id="somecell4"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "#6c757d",
          }
        }
      >
        1
      </td>
      <td
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Sum: 
        1
      </td>
    </tr>
    <tr>
      <td>
        Average sum: 
        0
      </td>
      <td>
        Average sum: 
        1
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`test cases for td cell leave hover cell 1`] = `[Function]`;

exports[`test should render initial table 1`] = `
<table
  className="table table-dark"
>
  <tbody>
    <tr
      id="row1"
    >
      <td
        id="somecell1"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        1
      </td>
      <td
        id="somecell2"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        2
      </td>
      <td
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Sum: 
        3
      </td>
    </tr>
    <tr
      id="row2"
    >
      <td
        id="somecell3"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        0
      </td>
      <td
        id="somecell4"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "",
          }
        }
      >
        1
      </td>
      <td
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Sum: 
        1
      </td>
    </tr>
    <tr>
      <td>
        Average sum: 
        0
      </td>
      <td>
        Average sum: 
        1
      </td>
    </tr>
  </tbody>
</table>
`;
